# fast_api_orders

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: autotests.yml  makefile.yml  pylint.yml
6/: index.html
6/export/: influxDbData.txt
data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 114ee09cb2a4cd30.json  221e6a6f72ff9986.json  2260912ae0225128.json  2707809f78f6ae73.json  2e82dc6064d07520.json  36b0dfb242e284f0.json  370595b4930aaa2e.json  38366f403cc3aeca.json  3e54baa65be5fb80.json  3f74b87d7ca152c1.json  4002334bb4731793.json  46449b3aeff50b6c.json  493b8576e30b6f9f.json  5b2b0a27a99a03a7.json  6db7184f86192e2b.json  729637fb0e9f1d7c.json  7578ca2542927461.json  75be6c1253cb4dcb.json  7ad3c7688a697b5d.json  7c757890560cd06d.json  8757e6bb1b3e3f3d.json  8ccaa67f2b2613cc.json  92814fa562cf31fd.json  97ba54cc39709f7c.json  984ad1234e8b1432.json  986f1d4bed6065c0.json  9b7abe2aec98adc.json  a1842085bca1a120.json  a1cdae0cf1d0c4e9.json  a3a868d5622de5ac.json  ba98f86dfe352ab2.json  c2fbaef63a83f8de.json  c5134dbadecc6967.json  c5e75c84755cb5f9.json  c843ed5d67d8ae18.json  c8d54d450d781046.json  ca06578411ec917e.json  d3bd1b6949749839.json  d4c92d15a91d0fa6.json  d56b3dcc89a9cec9.json  (+10 more)
data/test-cases/: 14e388ef4b37695b.json  20262de610947829.json  30d7f19323d3d627.json  326ffb175731f40d.json  39badab977a4b9e4.json  450f24cbcfc33068.json  4645748e00bc5183.json  62a97d385754943a.json  6ebb00561e651900.json  7b17047e3889b198.json  94805c3bc4c88614.json  a4bca87daa81645c.json  aeef5ff719ee30da.json  b66bfe1c419dfe2a.json  bc45b9fdf0db329d.json  bd80d0bec00c34df.json  be6ec91e5c82d30b.json  c6506f269179324f.json  d942f88d75e28894.json  dc9270e3f0e49988.json  e721ab6c52b42a92.json  e7cbf57cf1e880b2.json  f0f89ff51fd9ebe7.json
export/: influxDbData.txt  prometheusData.txt
history/: duration-trend.json  history.json
migrations/: alembic.ini  env.py
migrations/versions/: 66d6baa2b5b7_create_orders_table.py
qa/: .gitignore  Makefile  README.md  pyproject.toml  settings.py
qa/docker/: docker-compose.tests.yml  docker-compose.yml
qa/docker/app/: Dockerfile  nginx.conf  start.sh
qa/docker/tests/: Dockerfile  start_tests.sh
qa/scripts/: generate_index.py
qa/tests/: __init__.py  conftest.py
qa/tests/monitoring/: test_ping.py
qa/tests/notifications/: test_ws_order_update.py
qa/tests/orders/: test_cancel_order.py  test_create_order.py  test_get_all_orders.py  test_get_order.py
qa/trader_qa/: constants.py  qa_models.py
qa/trader_qa/actions/: __init__.py  assertion_actions.py  base_actions.py  user_actions.py
qa/trader_qa/clients/: __init__.py  api_client.py  db_client.py
reports/DAY-5_add_async_ws_tests/: index.html
reports/DAY-5_allure_history/: index.html
reports/DAY-5_fix_allure/: index.html
reports/DAY-5_fix_ws_tests/: index.html
reports/develop/: index.html
trader/: db.py  db_models.py  logic.py  main.py  middleware.py  models.py  routes.py  settings.py  web_socket.py
widgets/: severity.json  status-chart.json  summary.json
(+1167 files in other folders)
